Implement Inverse Statics algorithm
Conflicts:
	AUTHORS
	CMakeLists.txt
	src/CMakeLists.txt
	src/Joint.h

--- a/AUTHORS
+++ b/AUTHORS
@@ -3,3 +3,4 @@ François Keith <francois dot keith at gmail dot com>
 Benjamin Chrétien <chretien dot b at gmail dot com>
 Hervé Audren <h dot audren at gmail dot com>
 Pierre Gergondet <pierre dot gergondet at gmail dot com>
+Stanislas Brossette <stanislas dot brossette at gmail dot com>
