--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,4 @@ Joris Vaillant <joris dot vaillant at gmail dot com>
 François Keith <francois dot keith at gmail dot com>
 Benjamin Chrétien <chretien dot b at gmail dot com>
 Hervé Audren <h dot audren at gmail dot com>
+Pierre Gergondet <pierre dot gergondet at gmail dot com>
