--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.2.0-1ubuntu1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Tue, 28 Apr 2020 18:49:02 +0800
+
 rbdyn (1.1.0-1ubuntu2) unstable; urgency=medium
 
   * Include libRBDynParsers in the package
