--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.4.0-1ubuntu1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Mon, 09 Nov 2020 14:48:30 +0800
+
 rbdyn (1.3.0-1ubuntu1) unstable; urgency=medium
 
   * Update upstream version
