--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.5.0-1ubuntu1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Wed, 26 May 2021 18:53:34 +0800
+
 rbdyn (1.4.0-1ubuntu1) unstable; urgency=medium
 
   * Update upstream version
