--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,10 @@
-rbdyn (1.5.1-1ubuntu1) UNRELEASED; urgency=medium
+rbdyn (1.5.2-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Wed, 18 Aug 2021 11:36:14 +0800
+
+rbdyn (1.5.1-1ubuntu1) unstable; urgency=medium
 
   * Update upstream version
 
