--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.5.1-1ubuntu1) UNRELEASED; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Mon, 28 Jun 2021 11:06:20 +0800
+
 rbdyn (1.5.0-1ubuntu1) unstable; urgency=medium
 
   * Update upstream version
