--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.6.0-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Mon, 25 Jul 2022 17:28:43 +0200
+
 rbdyn (1.5.2-1debian1) unstable; urgency=medium
 
   * Update upstream version
