--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.7.0-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Sat, 15 Oct 2022 20:13:47 +0900
+
 rbdyn (1.6.0-1debian1) unstable; urgency=medium
 
   * Update upstream version
