--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.7.1-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Sat, 22 Oct 2022 12:32:50 -0700
+
 rbdyn (1.7.0-1debian1) unstable; urgency=medium
 
   * Update upstream version
