--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.8.0-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Wed, 26 Apr 2023 17:54:05 +0200
+
 rbdyn (1.7.2-1debian1) unstable; urgency=medium
 
   * Update upstream version
