--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.8.1-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Thu, 27 Apr 2023 02:51:15 +0200
+
 rbdyn (1.8.0-1debian1) unstable; urgency=medium
 
   * Update upstream version
