--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.8.2-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Tue, 13 Jun 2023 11:29:48 +0900
+
 rbdyn (1.8.1-1debian1) unstable; urgency=medium
 
   * Update upstream version
