--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.8.3-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Pierre Gergondet <pierre.gergondet+ppa@gmail.com>  Mon, 13 Nov 2023 10:39:34 +0900
+
 rbdyn (1.8.2-1debian1) unstable; urgency=medium
 
   * Update upstream version
