--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.9.2-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Arnaud TANGUY <arn.tanguy+ppa@gmail.com>  Mon, 24 Nov 2025 12:30:00 +0000
+
 rbdyn (1.9.1-1debian1) unstable; urgency=medium
 
   * Update upstream version
