--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+rbdyn (1.9.3-1debian1) unstable; urgency=medium
+
+  * Update upstream version
+
+ -- Thomas DUVINAGE <t.duvinage+ppa@outlook.fr>  Wed, 10 Dec 2025 12:00:00 +0000
+
 rbdyn (1.9.2-1debian1) unstable; urgency=medium
 
   * Update upstream version
